--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,10 @@
+ChangeLog
+
+0.22.4
+	Added InstallChecker
+	Updated AssemblyVersion
+	Updated for KSP 1.8
+
 0.22.3.2
 	Version bump for 1.5 rebuild
 
