--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,11 @@
 ChangeLog
 
+0.22.4.3
+	Fixed name in InstallChecker
+
+0.22.4.2
+	Removed some log spam
+
 0.22.4.1
 	Replaced two lines which referenced the KSPUtil.ApplicationRootPath with new properties
 
